src/objects/sample__c.object
<CustomObject>
    <fields>
        <fullName>checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>sample</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sample</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>check_box_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),IF( priorvalue( checkbox__c ) , true, false) )</errorConditionFormula>
        <errorMessage>cannot edit the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>picklist_validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( picklist__c ,&apos;A&apos;),ISPICKVAL( picklist__c ,&apos;B&apos;))</errorConditionFormula>
        <errorMessage>A &amp;B  CannotNot Selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>text_validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEFT(text__c,1)= &quot;5&quot;</errorConditionFormula>
        <errorMessage>text started with 5 is not valid</errorMessage>
    </validationRules>
</CustomObject>